<resources>
    <string name="app_name">Actividad6Marzo</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="su_nombre_por_favor">Su nombre por favor</string>
    <string name="guardar">Guardar</string>
    <string name="usar_preferencias">Usar Preferencias</string>
    <string name="pc">PC</string>
    <string name="_249_00_mxn">249.00 MXN</string>
    <string name="valorant">Valorant</string>
    <string name="comprar">Comprar</string>
    <string name="introduzca_su_nombre">Introduzca su nombre:</string>
    <string name="introduzca_su_edad">Introduzca su edad:</string>
    <string name="introduzca_su_altura">Introduzca su altura:</string>
    <string name="monedero_disponible">Monedero Disponible</string>
    <string name="preferences">preferences</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="altura">Altura</string>
    <string name="monedero">Monedero</string>
    <string name="regresar">Regresar</string>
    <string name="mis_preferencias">Mis Preferencias</string>
    <string name="t">T</string>
    <string name="horiz">Horiz.</string>
    <string name="_2_col">2 Col</string>
    <string name="_3_col">3 Col</string>
</resources>