<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity2">

    <ImageView
        android:id="@+id/fotoJuego"
        android:layout_width="126dp"
        android:layout_height="123dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/valorant" />

    <TextView
        android:id="@+id/tituloJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valorant"
        android:textColor="#d73030"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/fotoJuego"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/consola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/pc"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/fotoJuego"
        app:layout_constraintTop_toBottomOf="@+id/tituloJuego" />

    <TextView
        android:id="@+id/precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/_249_00_mxn"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/consola"
        app:layout_constraintTop_toBottomOf="@+id/tituloJuego" />


    <TextView
        android:id="@+id/clasificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bnComprar"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/fotoJuego"
        app:layout_constraintTop_toBottomOf="@+id/consola"
        app:layout_constraintVertical_bias="0.257" />

    <Button
        android:id="@+id/bnComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precio"
        app:layout_constraintVertical_bias="0.04" />

</androidx.constraintlayout.widget.ConstraintLayout>